# mcom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
release/mcom_noupx/: mcom.ini
release/mcom_v1.0/: mcom.ini
res/: mcom.qrc
res/qss/: global.qss  mainwidget.qss  theme.ini  view_serial.qss
src/: main.cpp  mainwidget.cpp
src/inc/: global.hpp  mainwidget.h  mainwidget.hpp  view_modbus.hpp  view_program.hpp  view_serial.hpp
src/utli/: byteverify.hpp  com.hpp  serial.hpp
src/view/: modbus.cpp  program.cpp  serial.cpp
src/widget/: MCombobox.h  MCombobox.hpp  WTextFlowShow.hpp
ui/: mainwidget.ui  view_modbus.ui  view_program.ui  view_serial.ui
